--- a/src/css/PostPage.css
+++ b/src/css/PostPage.css
@@ -1,5 +1,5 @@
 .postPageContainer{
-    height: 95vh;
+    height: 102vh;
     margin-top: 6vh;
     margin-bottom: 6vh;
     width: 100vw;
@@ -134,7 +134,7 @@
 .emailSendButton{
     display: block;
     margin-top: 1vh;
-    height: 5vh;
+    height: 6vh;
     width: 95vw;
     background-color: var(--main-color);
     border: none;
@@ -144,7 +144,21 @@
     border-radius: 0.8vh;
     transition: all 150ms;
 }
-.emailSendButton:hover{
+.emailTestSendButton{
+    display: block;
+    margin-top: 1vh;
+    height: 6vh;
+    width: 95vw;
+    background-color: rgb(0, 187, 255);
+    border: none;
+    color: white;
+    font-family: 'Libre Franklin';
+    font-size: 1.8vh;
+    border-radius: 0.8vh;
+    transition: all 150ms;
+}
+
+.emailSendButton:hover, .emailTestSendButton:hover{
     transform: scale(1.01);
     filter: brightness(110%);
 }
