--- a/src/css/FoundProfiles.css
+++ b/src/css/FoundProfiles.css
@@ -100,6 +100,7 @@
     transition: all ease-in  600ms !important;
     background-color: wheat;
     overflow: hidden;
+    z-index: 1;
     display: flex;
     flex-direction: column;
     transition: all ease-in 150ms;
